2010-07-13  Yoshiki Hayashi  <yhayashi@google.com>

Reviewed by Kent Tamura.

        Make sure correct Nodes are passed to childrenChanged so that
        :last-child gets properly applied when fragment is inserted.
        https://bugs.webkit.org/show_bug.cgi?id=37944

        * fast/css/last-child-innerhtml-expected.txt: Added.
        * fast/css/last-child-innerhtml.html: Added.
2010-07-13  Yoshiki Hayashi  <yhayashi@google.com>

        Reviewed by Kent Tamura.

        Make sure correct Nodes are passed to childrenChanged so that
        :last-child gets properly applied when fragment is inserted.
        https://bugs.webkit.org/show_bug.cgi?id=37944

        Test: fast/css/last-child-innerhtml.html

        * dom/ContainerNode.cpp:
        (WebCore::ContainerNode::replaceChild):
        (WebCore::ContainerNode::appendChild):

Canonical link: https://commits.webkit.org/54046@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63190 268f45cc-cd09-0410-ab3c-d52691b4dbfc